# score-pubsub-cmake-example

./: .gitignore  BUILD  CMakeLists.txt  README.md  datatype.cpp  datatype.h  install_sysroot.sh  publisher.cpp  setup_score_sysroot.sh  subscriber.cpp  toolchain-arm64.cmake
etc/: mw_com_config.json
